<resources>
    <string name="app_name">Wisdom in words</string>
    <string name="action_irregular_verbs">Irregular verbs</string>
    <string name="action_main_dictionary">Main dictionary</string>
    <string name="action_sync">Sync</string>
    <string name="action_save">Save and close</string>
    <string name="action_reset">Reset</string>
    <string name="action_help">Help (video)</string>
    <string name="action_youglish">YouGlish</string>
    <string name="action_googleSearch">Google search</string>
    <string name="action_voiceMode">Voice mode</string>
    <string name="action_textMode">Text mode</string>
</resources>
