<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_main_dictionary"
        android:orderInCategory="100"
        android:title="@string/action_main_dictionary"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_irregular_verbs"
        android:orderInCategory="100"
        android:title="@string/action_irregular_verbs"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sync"
        android:orderInCategory="100"
        android:title="@string/action_sync"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/action_save"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="100"
        android:title="@string/action_reset"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_youglish"
        android:orderInCategory="100"
        android:title="@string/action_youglish"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_googleSearch"
        android:orderInCategory="100"
        android:title="@string/action_googleSearch"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_voiceMode"
        android:orderInCategory="100"
        android:title="@string/action_voiceMode"
        app:showAsAction="never"/>


</menu>
